--- a/front/package.json
+++ b/front/package.json
@@ -51,6 +51,8 @@
     "sass-loader": "^6.0.7",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "ts-loader": "3.1.1",
     "typescript": "^2.7.2",
     "uglifyjs-webpack-plugin": "^1.1.1",
